sonarqube medium fixes